--- a/templates/pages/eula.html
+++ b/templates/pages/eula.html
@@ -83,7 +83,7 @@
 		<p></p>
 		<h4>5.3 Propriété du contenu publié par un membre </h4>
 		<p></p>
-		<p>Le membre reste titulaire de l'intégralité de ses droits de propriété intellectuelle. Mais par la mise en ligne d'un tutoriel ou article, il autorise gratuitement et sans clause d'exclusivité l'éditeur du site de représenter, modifier, adapter et diffuser sa publication sur le site, pour la durée de la propriété intellectuelle. Il autorise notamment l'éditeur du site à utiliser sa publication sur Internet dans le but de faire connaître le site.</p>
+		<p>Le membre reste titulaire de l’intégralité de ses droits de propriété intellectuelle sur l’ensemble du contenu qu’il publie (articles, tutoriels, de même que le contenu publié sur les forums). Mais par la mise en ligne d’un tutoriel,  ou article, il autorise gratuitement et sans clause d’exclusivité l’éditeur du site de représenter, modifier, adapter et diffuser sa publication sur le site, pour la durée de la propriété intellectuelle. Il autorise notamment l’éditeur du site à utiliser sa publication sur Internet dans le but de faire connaître le site.</p>
 		<p></p>
 		<p>L'auteur d'un tutoriel ou d'un article a également la possibilité de mettre sa publication en ligne selon la licence &ldquo;CC&rdquo; (Creative Commons) qui lui convient le mieux parmi les licences CC suivantes :</p>
 		<ul>
@@ -147,8 +147,10 @@
 		<p>De manière générale, les cookies sont sans dommage pour l'ordinateur du membre. Ce dernier est libre d'accepter ou refuser les cookies en configurant son navigateur internet à cet effet. Pour ce faire, le membre peut se rendre sur le site de la Commission Nationale de l'Informatique et des Libertés (CNIL) à l'adresse : <a href="http://www.google.com/url?q=http%3A%2F%2Fwww.cnil.fr%2Fvos-libertes%2Fvos-traces%2Fles-cookies%2F&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNGTMYq5pUcHrTYYP4OpVsSYp3G73Q">http://www.cnil.fr/vos-libertes/vos-traces/les-cookies/</a>&nbsp;donnant toutes les informations relatives à une telle configuration. Les cookies sont anonymes et ne sont en aucun cas utilisés pour collecter des données à caractère personnel, mais uniquement à des fins de connexion et statistiques.</p>
 		<p></p>
 		<h3>7. Propriété intellectuelle</h3>
-		<p>Les marques, logos, signes distinctifs et tout autre contenu du site sont la propriété exclusive de l'éditeur du site et&nbsp;font l'objet d'une protection par le Code de la propriété intellectuelle.</p>
+		<p>Les marques, illustrations, signes distinctifs et tout autre contenu du site sont la propriété exclusive de l'éditeur du site et&nbsp;font l'objet d'une protection par le Code de la propriété intellectuelle.</p>
 		<p>Toute reproduction, publication, copie des différents contenus nécessite au préalable l'autorisation de l'éditeur du site. </p>
+		<p></p>
+		<p>Le logo de zestedesavoir.com est une réalisation de <a href="http://maxroyo.com/">MaxRoyo</a> sous licence <a href="http://creativecommons.org/licenses/by/3.0/fr/">CC BY</a>.</p>
 		<p></p>
 		<p>Il n'est concédé aux membres aucun droit de propriété intellectuelle sur le site.</p>
 		<p>Toute exploitation non autorisée de tout ou partie du contenu de l'éditeur du site est susceptible de faire l'objet des poursuites judiciaires.</p>
@@ -194,7 +196,7 @@
 		<p></p>
 		<p>12. Droit applicable et juridiction compétente</p>
 		<p></p>
-		<p>La législation française s'applique au présent contrat. Il est fait attribution exclusive de juridiction aux tribunaux compétents de [tribunaux compétents (Paris ?)].</p>
+		<p>La législation française s'applique au présent contrat. Il est fait attribution exclusive de juridiction aux tribunaux compétents de Vendée.</p>
     </div>
 </div>
 
