--- a/assets/scss/_blocs.scss
+++ b/assets/scss/_blocs.scss
@@ -18,14 +18,14 @@ div.information:before {
 }
 
 
-div.warning p{
+div:not(.alert-box).warning p{
 	border : 1px solid #f0b37e;
 	border-top: transparent;
 	background-color: #ffedcc;
 	padding : 1rem;
 }
 
-div.warning:before {
+div:not(.alert-box).warning:before {
 	width: 100%;
 	height: 30px;
 	border : 1px solid #f0b37e;
@@ -37,7 +37,7 @@ div.warning:before {
 	display: block;
 }
 
-div.error p{
+div:not(.alert-box).error p{
 	border : 1px solid #6B0D0D;
 	border-top: transparent;
 	background-color: #F7230C;
@@ -45,7 +45,7 @@ div.error p{
 	padding : 1rem;
 }
 
-div.error:before {
+div:not(.alert-box).error:before {
 	width: 100%;
 	height: 30px;
 	border : 1px solid #6B0D0D;
