--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -239,7 +239,7 @@
 {% with profile=user|profile %}
 <div class="large-12 columns">
     <div class="large-1 columns user hide-for-small">
-        <img src="{{profile.get_avatar_url}}" alt="" class="avatar avatar-link">
+        <img src="{{profile.get_avatar_url}}" alt="" class="avatar-forum avatar-link">
     </div>
     <div class="large-11 columns user hide-for-small">
         {% crispy form %}
