--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -73,8 +73,8 @@ $secondary-color: #e7ebec;
 // $column-gutter: rem-calc(30);
 
 // Media Query Ranges
-// $small-range: (0em, 40em);
-// $medium-range: (40.063em, 64em);
+$small-range: (0em, 64em);
+$medium-range: (64em, 64em);
 // $large-range: (64.063em, 90em);
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
