--- a/templates/home.html
+++ b/templates/home.html
@@ -72,11 +72,11 @@ class="active"
                         </div>
                         <div class="large-4 columns">
                             {% if article.get_reaction_count = 0 %}
-                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small>aucune réaction</small></a>
+                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small>Aucune réaction</small></a>
                             {% elif article.get_reaction_count = 1 %}
-                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small>{{ article.get_reaction_count }} réaction</small></a>
+                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small> {{ article.get_reaction_count }} réaction</small></a>
                             {% else %}
-                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small>{{ article.get_reaction_count }} réactions</small></a>
+                                <a class="fi-comment size-16" href="{{article.get_last_reaction.get_absolute_url}}"><small> {{ article.get_reaction_count }} réactions</small></a>
                             {% endif %}
                         </div>
                     </div>
