Template refacto : forum (not ended) + breadcrumb

--- a/templates/article/admin/view.html
+++ b/templates/article/admin/view.html
@@ -12,7 +12,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">{{ article.title }}</li>
+    <li>{{ article.title }}</li>
 {% endblock %}
 
 
