--- a/templates/article/find.html
+++ b/templates/article/find.html
@@ -31,7 +31,7 @@
             Articles rédigés
         </a>
     </li>
-    <li class="current">Liste des articles rédigés par {{ usr.username }}</li>
+    <li>Liste des articles rédigés par {{ usr.username }}</li>
 {% endblock %}
 
 
