--- a/templates/article/reaction/edit.html
+++ b/templates/article/reaction/edit.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a></li>
-    <li class="current">Éditer une réponse</a></li>
+    <li>Éditer une réponse</a></li>
 {% endblock %}
 
 
