--- a/templates/article/reaction/new.html
+++ b/templates/article/reaction/new.html
@@ -18,7 +18,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ article.get_absolute_online_url }}">{{ article.title }}</a></li>
-    <li class="current">Répondre à l'article</li>
+    <li>Répondre à l'article</li>
 {% endblock %}
 
 
