--- a/templates/article/validation/history.html
+++ b/templates/article/validation/history.html
@@ -12,7 +12,7 @@
 {% block breadcrumb %}
     <li><a href="{% url "zds.article.views.list_validation" %}">Validation</a></li>
     <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
-    <li class="current">Historique</li>
+    <li>Historique</li>
 {% endblock %}
 
 
