--- a/templates/forum/includes/topic_row.part.html
+++ b/templates/forum/includes/topic_row.part.html
@@ -5,7 +5,7 @@
 <div class="forum-entry
     {% if topic.is_locked %}
         forum-entry-locked
-    {% elseif topic.is_solved %}
+    {% elif topic.is_solved %}
         forum-entry-solved
     {% endif %}">
 
