--- a/templates/forum/topic/index.html
+++ b/templates/forum/topic/index.html
@@ -11,12 +11,12 @@
 
 
 {% block headline %}
-    <h2>{{ topic.title }}</h2>
+    {{ topic.title }}
 {% endblock %}
 
 
 {% block headline_sub %}
-    <h3 class="subtitle">{{ topic.subtitle }}</h3>
+    {{ topic.subtitle }}
 {% endblock %}
 
 
