--- a/templates/gallery/gallery/details.html
+++ b/templates/gallery/gallery/details.html
@@ -12,7 +12,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">{{ gallery.title }}</li>
+    <li>{{ gallery.title }}</li>
 {% endblock %}
 
 
