--- a/templates/gallery/image/new.html
+++ b/templates/gallery/image/new.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></li>
-    <li class="current">Nouvelle image</li>
+    <li>Nouvelle image</li>
 {% endblock %}
 
 
