--- a/templates/member/new_password/failed.html
+++ b/templates/member/new_password/failed.html
@@ -15,7 +15,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">Nouveau mot de passe</li>
+    <li>Nouveau mot de passe</li>
 {% endblock %}
 
 
