--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ usr.username }}</a></li>
+    <li><a href="#">{{ usr.username }}</a></li>
 {% endblock %}
 
 {% block sidebar_actions %}
