--- a/templates/member/register/token_success.html
+++ b/templates/member/register/token_success.html
@@ -16,7 +16,7 @@
 
 {% block breadcrumb %}
     <li><a href="{% url "zds.member.views.register_view" %}">Inscription</a></li>
-    <li class="current">Confirmation</li>
+    <li>Confirmation</li>
 {% endblock %}
 
 
