--- a/templates/member/settings/profile.html
+++ b/templates/member/settings/profile.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
-    <li class="current">Mon Profil</li>
+    <li>Mon Profil</li>
 {% endblock %}
 
 
