--- a/templates/mp/post/edit.html
+++ b/templates/mp/post/edit.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ post.topic.get_absolute_url }}">{{ post.privatetopic.title }}</a></li>
-    <li class="current">Éditer un message</li>
+    <li>Éditer un message</li>
 {% endblock %}
 
 
