--- a/templates/mp/topic/new.html
+++ b/templates/mp/topic/new.html
@@ -11,7 +11,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">Nouvelle conversation privée</li>
+    <li>Nouvelle conversation privée</li>
 {% endblock %}
 
 
