--- a/templates/tutorial/answer.html
+++ b/templates/tutorial/answer.html
@@ -16,7 +16,7 @@
 {% block breadcrumb %}
     {# TODO : Mettre le lien vers le tutoriel #}
     <li><a href="#">{{ tutorial.title }}</a></li>
-    <li class="current">Commenter le tutoriel</li>
+    <li>Commenter le tutoriel</li>
 {% endblock %}
 
 {% block content %}
