--- a/templates/tutorial/edit_chapter.html
+++ b/templates/tutorial/edit_chapter.html
@@ -26,7 +26,7 @@
     <li><a href="{{ chapter.part.get_absolute_url }}">{{ chapter.part.title }}</a></li>
     <li><a href="{{ chapter.get_absolute_url }}">{{ chapter.title }}</a></li>
 {% endif %}
-    <li class="current"><a href="#">Éditer le chapitre</a></li>
+    <li><a href="#">Éditer le chapitre</a></li>
 {% endblock %}
 
 {% block content %}
