--- a/templates/tutorial/edit_extract.html
+++ b/templates/tutorial/edit_extract.html
@@ -17,7 +17,7 @@
         <li><a href="{{ extract.chapter.part.get_absolute_url }}">{{ extract.chapter.part.title }}</a></li>
         <li><a href="{{ extract.chapter.get_absolute_url }}">{{ extract.chapter.title }}</a></li>
     {% endif %}
-    <li class="current"><a href="#">Éditer l'extrait</a></li>
+    <li><a href="#">Éditer l'extrait</a></li>
 {% endblock %}
 
 {% block content %}
