--- a/templates/tutorial/find_betatutorial.html
+++ b/templates/tutorial/find_betatutorial.html
@@ -16,7 +16,7 @@
         <li ><a href="{{ profile.get_absolute_url }}">{{ usr.username }}</a></li>
     {% endwith %}
     <li ><a href="{% url "zds.tutorial.views.find_tuto" usr.pk %}?type=beta">Tutoriels en Beta</a></li>
-    <li class="current"><a href="#">Recherche</a></li>
+    <li><a href="#">Recherche</a></li>
 {% endblock %}
 
 {% block content %}
