--- a/templates/tutorial/history_tutorial.html
+++ b/templates/tutorial/history_tutorial.html
@@ -14,7 +14,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
-    <li class="current"><a href="#">Historique</a></li>
+    <li><a href="#">Historique</a></li>
 {% endblock %}
 
 {% block sidebar_actions %}
