--- a/templates/tutorial/history_validation.html
+++ b/templates/tutorial/history_validation.html
@@ -14,7 +14,7 @@ Historique de validation du tutoriel
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Historique</a></li>
+    <li><a href="#">Historique</a></li>
 {% endblock %}
 
 {% block sidebar_actions %}
