--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current">Liste des tutoriels</a>
+    <li>Liste des tutoriels</a>
 {% endblock %}
 
 {% block content %}
