--- a/templates/tutorial/new_chapter.html
+++ b/templates/tutorial/new_chapter.html
@@ -14,7 +14,7 @@
 {% block breadcrumb %}
     <li><a href="{{ part.tutorial.get_absolute_url }}">{{ part.tutorial.title }}</a></li>
     <li><a href="{{ part.get_absolute_url }}">{{ part.title }}</a></li>
-    <li class="current"><a href="#">Nouveau chapitre</a></li>
+    <li><a href="#">Nouveau chapitre</a></li>
 {% endblock %}
 
 {% block content %}
