--- a/templates/tutorial/new_extract.html
+++ b/templates/tutorial/new_extract.html
@@ -27,7 +27,7 @@
     {% else %}
         <li><a href="{{ chapter.tutorial.get_absolute_url }}">{{ chapter.tutorial.title }}</a></li>
     {% endif %}
-    <li class="current"><a href="#">Ajouter un extrait</a></li>
+    <li><a href="#">Ajouter un extrait</a></li>
 {% endblock %}
 
 {% block content %}
