--- a/templates/tutorial/new_tutorial.html
+++ b/templates/tutorial/new_tutorial.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Nouveau tutoriel</a></li>
+    <li><a href="#">Nouveau tutoriel</a></li>
 {% endblock %}
 
 {% block content %}
