--- a/templates/tutorial/validation.html
+++ b/templates/tutorial/validation.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current">Tutoriels en attente de validation</li>
+    <li>Tutoriels en attente de validation</li>
 {% endblock %}
 
 {% block sidebar_actions %}
