--- a/templates/tutorial/view_part_online.html
+++ b/templates/tutorial/view_part_online.html
@@ -28,7 +28,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ part.tutorial.get_absolute_url_online }}">{{ part.tutorial.title }}</a></li>
-    <li class="current"><a href="#">{{ part.title }}</a></li>
+    <li><a href="#">{{ part.title }}</a></li>
 {% endblock %}
 
 {% block content %}
