--- a/templates/tutorial/view_tutorial.html
+++ b/templates/tutorial/view_tutorial.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ tutorial.title }}</a></li>
+    <li><a href="#">{{ tutorial.title }}</a></li>
 {% endblock %}
 
 {% block headline_sub-actions %}
