--- a/templates/tutorial/view_tutorial_online.html
+++ b/templates/tutorial/view_tutorial_online.html
@@ -38,7 +38,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">{{ tutorial.title }}</a></li>
+    <li><a href="#">{{ tutorial.title }}</a></li>
 {% endblock %}
 
 {% block sidebar_actions %}
