--- a/templates/article/admin/edit.html
+++ b/templates/article/admin/edit.html
@@ -12,7 +12,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ article.get_absolute_online_url }}">{{ article.title }}</a></li>
-    <li class="current">Éditer</li>
+    <li>Éditer</li>
 {% endblock %}
 
 
