--- a/templates/article/admin/history.html
+++ b/templates/article/admin/history.html
@@ -13,7 +13,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ article.get_absolute_url }}">{{ article.title }}</a></li>
-    <li class="current">Historique des modifications</li>
+    <li>Historique des modifications</li>
 {% endblock %}
 
 
