--- a/templates/article/validation/index.html
+++ b/templates/article/validation/index.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{% url "zds.article.views.list_validation" %}">Validation</a></li>
-    <li class="current">Liste des articles</li>
+    <li>Liste des articles</li>
 {% endblock %}
 
 
