--- a/templates/gallery/image/edit.html
+++ b/templates/gallery/image/edit.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></li>
-    <li class="current">Éditer une Image</li>
+    <li>Éditer une Image</li>
 {% endblock %}
 
 
