--- a/templates/member/forgot_password/index.html
+++ b/templates/member/forgot_password/index.html
@@ -16,7 +16,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">Mot de passe oublié</li>
+    <li>Mot de passe oublié</li>
 {% endblock %}
 
 
