--- a/templates/member/forgot_password/success.html
+++ b/templates/member/forgot_password/success.html
@@ -15,7 +15,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">Mot de passe oublié</li>
+    <li>Mot de passe oublié</li>
 {% endblock %}
 
 
