--- a/templates/member/settings/account.html
+++ b/templates/member/settings/account.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
-    <li class="current">Mon Compte</li>
+    <li>Mon Compte</li>
 {% endblock %}
 
 
