--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -16,7 +16,7 @@
 
 
 {% block breadcrumb %}
-    <li class="current">Liste des conversations</li>
+    <li>Liste des conversations</li>
 {% endblock %}
 
 
