--- a/templates/mp/post/new.html
+++ b/templates/mp/post/new.html
@@ -11,7 +11,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ topic.get_absolute_url }}">{{ topic.title }}</a></li>
-    <li class="current">Répondre au MP</li>
+    <li>Répondre au MP</li>
 {% endblock %}
 
 
