--- a/templates/tutorial/edit_note.html
+++ b/templates/tutorial/edit_note.html
@@ -15,7 +15,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ tutorial.get_absolute_url_online }}">{{ tutorial.title }}</a></li>
-    <li class="current"><a href="javascript:;">Éditer un message</a></li>
+    <li><a href="javascript:;">Éditer un message</a></li>
 {% endblock %}
 
 {% block content %}
