--- a/templates/tutorial/edit_part.html
+++ b/templates/tutorial/edit_part.html
@@ -21,7 +21,7 @@
 {% block breadcrumb %}
     <li><a href="{{ part.tutorial.get_absolute_url }}?version={{version}}">{{ part.tutorial.title }}</a></li>
     <li><a href="{{ part.get_absolute_url }}?version={{version}}">{{ part.title }}</a></li>
-    <li class="current"><a href="#">Éditer la partie</a></li>
+    <li><a href="#">Éditer la partie</a></li>
 {% endblock %}
 
 {% block content %}
