--- a/templates/tutorial/edit_tutorial.html
+++ b/templates/tutorial/edit_tutorial.html
@@ -20,7 +20,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
-    <li class="current"><a href="#">Éditer le tutoriel</a></li>
+    <li><a href="#">Éditer le tutoriel</a></li>
 {% endblock %}
 
 {% block content %}
