--- a/templates/tutorial/new_part.html
+++ b/templates/tutorial/new_part.html
@@ -13,7 +13,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ tutorial.get_absolute_url }}">{{ tutorial.title }}</a></li>
-    <li class="current"><a href="#">Nouvelle partie</a></li>
+    <li><a href="#">Nouvelle partie</a></li>
 {% endblock %}
 
 {% block content %}
