--- a/templates/tutorial/view_chapter_online.html
+++ b/templates/tutorial/view_chapter_online.html
@@ -49,7 +49,7 @@
 {% block breadcrumb %}
     <li><a href="{{ chapter.part.tutorial.get_absolute_url_online }}">{{ chapter.part.tutorial.title }}</a></li>
     <li><a href="{% url "view-part-url-online" chapter.part.tutorial.pk chapter.part.tutorial.slug chapter.part.slug %}">{{ chapter.part.title }}</a></li>
-    <li class="current"><a href="#">{{ chapter.title }}</a></li>
+    <li><a href="#">{{ chapter.title }}</a></li>
 {% endblock %}
 
 {% block content %}
