--- a/templates/tutorial/view_part.html
+++ b/templates/tutorial/view_part.html
@@ -33,7 +33,7 @@
 
 {% block breadcrumb %}
     <li><a href="{{ part.tutorial.get_absolute_url }}?version={{version}}">{{ part.tutorial.title }}</a></li>
-    <li class="current"><a href="#">{{ part.title }}</a></li>
+    <li><a href="#">{{ part.title }}</a></li>
 {% endblock %}
 
 {% block headline_sub-actions %}
